# monet-stats

./: .codespell-exclude  .gitignore  .pre-commit-config.yaml  MONET-STATS-SPECIFICATION.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml
data/: README.md  generate_example_datasets.py
data/data/: dataset_summary.txt  precipitation_obs_mod.csv  temperature_obs_mod.csv
docs/: GH_PAGES_WORKFLOW.md  contributing.md  faq.md  getting-started.md  index.md  installation.md  system-integration.md
docs/api/: benchmarks.md  contingency-metrics.md  correlation-metrics.md  data-processing.md  efficiency-metrics.md  error-metrics.md  interfaces.md  overview.md  performance.md  plugin-system.md  relative-metrics.md  spatial-ensemble-metrics.md  utils-stats.md
docs/math/: overview.md
docs/notebooks/: 01_basic_statistical_analysis.ipynb  02_model_observation_comparison.ipynb  03_spatial_analysis_downscaling_fixed.ipynb  04_ensemble_analysis_multi_model.ipynb  05_performance_optimization_large_datasets.ipynb  06_integration_examples.ipynb  README.md
docs/workflows/: climate-data-analysis.md
notebooks/: 01_basic_statistical_analysis.ipynb  02_model_observation_comparison.ipynb  03_spatial_analysis_downscaling.ipynb  03_spatial_analysis_downscaling_fixed.ipynb  04_ensemble_analysis_multi_model.ipynb  05_performance_optimization_large_datasets.ipynb.bak  06_integration_examples.ipynb  README.md
scripts/: test_cicd.py
src/monet_stats/: __init__.py  benchmarks.py  contingency_metrics.py  correlation_metrics.py  data_processing.py  efficiency_metrics.py  error_metrics.py  interfaces.py  performance.py  plugin_system.py  relative_metrics.py  spatial_ensemble_metrics.py  spatial_skill_metrics.py  test_aliases.py  test_utils.py  utils_stats.py
tests/: __init__.py  conftest.py  test_benchmarks.py  test_comprehensive_integration.py  test_contingency_metrics.py  test_correlation_metrics.py  test_correlation_metrics_additional.py  test_coverage_report.py  test_data_processing.py  test_data_processing_additional.py  test_doc_examples.py  test_edge_cases.py  test_efficiency_metrics.py  test_efficiency_metrics_additional.py  test_error_metrics.py  test_error_metrics_additional.py  test_integration.py  test_interfaces.py  test_no_np_nop.py  test_performance.py  test_performance_benchmarks.py  test_plugin_system.py  test_property_based.py  test_regression_validation.py  test_relative_metrics.py  test_spatial_ensemble_metrics.py  test_spatial_skill_metrics.py  test_statistical_functions.py  test_utils.py  test_utils_stats.py
